app/globals.css
@import "tailwindcss";

:root {
  /* *CONTAINER WIDTH */
  --container-layout: 1750px;
  --container-main: 1300px;

  /* *SECTIONS MARGIN Y*/
  --section-sm: 40px;
  --section-md: 80px;
  --section-lg: 100px;

  /* *STACK GAP */
  --space-xs: 10px;
  --space-sm: 16px;
  --space-md: 24px;
  --space-lg: 32px;
  --space-xl: 48px;

  /* *SUPERFICI */
  --background: #ffffff;
  --foreground: #171717;

  /* *TESTI */
  --text-primary: rgba(0, 0, 0, 0.9);
  --text-secondary: rgba(0, 0, 0, 0.6);
  --text-highlight: #77b2ff;
  --text-highlight-15: rgba(119, 178, 255, 0.15);

  --text-secondary-dark: rgba(255, 255, 255, 0.603);
  --text-inverse: #fff;

  /* *BORDERS E DIVISORI */
  --border-default: rgba(0, 0, 0, 0.15);

  /* *COLORI IDENTIFICATIVI */
  --brand: #77b2ff;
  --brand-hover: #94c2ff;
  --brand-soft: rgba(119, 178, 255, 0.15);

  /* *PULSANTI */
  --btn-primary-bg: var(--foreground);
  --btn-primary-text: var(--text-inverse);
  --btn-primary-bg-hover: #262626;

  /* * CTA buttons */
  --btn-cta-bg: var(--brand);
  --btn-cta-bg-hover: var(--brand-hover);

  /* * White button */
  --btn-secondary-bg: white;
  --btn-secondary-bg-hover: var(--brand);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --text-medium: var(--medium-emphasis);


  --font-sans: var(--font-parkinsans-sans);
  --font-mono: var(--font-fustat-mono);
}

/* * Modalità Dark */
@media (prefers-color-scheme: dark) {
  :root {
    --background: #ffffff; /*  #0a0a0a*/
    --foreground: #0a0a0a; /* #ededed */
  }
}

body {
  background: var(--background);
  color: var(--foreground);
}

footer{
  margin-top: 60px;
}

@media (min-width: 640px) {
  footer{
    margin-top: 70px;
  }
}

@media (min-width: 1024px) {
  footer{
    margin-top: 90px;
  }

  :root{
      --space-xs: 16px;
      --space-sm: 24px;
      --space-md: 32px;
      --space-lg: 46px;
      --space-xl: 58px;
  }
}

/* Section component padding */
.section-sm { padding-block: var(--section-sm); }
.section-md { padding-block: var(--section-md); }
.section-lg { padding-block: var(--section-lg); }

/* Stack component gap */
.gap-xs { gap: var(--space-xs) }
.gap-sm { gap: var(--space-sm) }
.gap-md { gap: var(--space-md) }
.gap-lg { gap: var(--space-lg) }
.gap-xl { gap: var(--space-xl) }

